# wasmedge-android

./: .gitignore  .gitmodules  ExampleClientActivity.kt  README.md  SERVICE_README.md  build.gradle  service_permissions_example.xml  settings.gradle
.github/workflows/: build-apk.yml  build.yml  release.yml
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/llamaedge/: libwasmedge.so.0  wasmedge
app/src/main/java/com/example/wasmedge_android_cli/: BootReceiver.kt  ExampleClientActivity.kt  IWasmEdgeService.java  IWasmEdgeServiceInterface.kt  IWasmEdgeServiceStub.java  MainActivity.kt  WasmEdgeService.kt  WasmEdgeServiceConnection.kt
app/src/main/java/com/example/wasmedge_android_cli/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/java/org/wasmedge/example_app/: MainActivity.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
gradle/wrapper/: gradle-wrapper.properties
lib/: build.gradle
lib/src/main/cpp/: CMakeLists.txt  wasmedge_lib.cpp
lib/src/main/java/org/wasmedge/native_lib/: NativeLib.kt
